tests/golden/reject/shim_sqrt_argtype_reject.goo
// P4.1: shim signature checking — math.Sqrt(float64) rejects a string arg.
package main

import "math"

func main() {
	math.Sqrt("x")
}
